<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp"
        tools:context=".ui.decks.DeckCreationFragment">

        <LinearLayout
            android:id="@+id/deck_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deck_name_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/deck_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_commander_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deck_name_layout"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_commander_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_commander_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/first_commander_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/first_commander_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_commander_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/first_commander_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/second_commander_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/second_commander_question_text"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_commander_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_commander_question_layout"
            android:padding="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/second_commander_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_commander_question_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/second_commander_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/first_commander_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/companion_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/second_commander_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/companion_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/companion_text"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/companion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companion_question_layout"
            android:padding="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/companion_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companion_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/companion_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/companion_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/flair_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/companion_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_flair_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/main_flair_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_flair_text"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Spinner
                    android:id="@+id/main_flair_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/secondary_flair_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/secondary_flair_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secondary_flair_text"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Spinner
                    android:id="@+id/secondary_flair_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <!--TODO background color picker -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
