<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_player_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="70sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:rotation="-90"/>

        <TextView
            android:id="@+id/life_counter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="270"
            android:text="@string/life_counter_text"
            android:textColor="@color/white"
            android:textSize="170sp"
            app:layout_constraintBottom_toTopOf="@id/guideline_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_layout"
            app:layout_constraintTop_toBottomOf="@id/guideline_25" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_25"
            app:layout_constraintBottom_toTopOf="@id/guideline_75">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>